--- a/style.css
+++ b/style.css
@@ -397,7 +397,6 @@ nav button {
   width: 130px;
   padding: 10px 0px;
   border-radius: 25px;
-  background-color: var(--dark-blue);
   color: white;
   border: none;
   margin-right: 250px;
@@ -407,6 +406,14 @@ nav button {
   nav button {
     margin-right: 50px;
   }
+}
+
+.top-button {
+  background-color: var(--dark-blue);
+}
+
+.top-button:hover {
+  background-color: darkcyan;
 }
 /* BUTTONS END */
 
